--- a/app/project1/webapp/i18n/i18n.properties
+++ b/app/project1/webapp/i18n/i18n.properties
@@ -7,3 +7,6 @@ appTitle=Orders view
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
+
+#XCOL: Custom action text
+sendMail=Send Mail
